--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    overflow: auto;
+    min-width: 1200px;
+}
+body,html{
+    height: 100%;
+}
