--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,12 +1,85 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    overflow: auto;
-    min-width: 1200px;
+body {
+  overflow: auto;
+  min-width: 1200px;
 }
-body,html{
-    height: 100%;
+body,
+html {
+  height: 100%;
+}
+
+// 头部导航栏样式
+.head-nav-show {
+  background: rgba(0, 0, 0, 0.753);
+  box-shadow: 0 0 5px black;
+  position: absolute !important;
+}
+
+//其他内容样式
+#article-box {
+  margin-top: 80px;
+  min-height: 600px;
+  padding: 20px 0;
+  #article-tab {
+    transition: 0.5s;
+    position: sticky;
+    top: 0px;
+    padding: 20px 0;
+    background: rgba(255, 255, 255, 0.726);
+    border-bottom: 2px dashed transparent;
+    .article-tab {
+      max-width: 1000px;
+      margin: 0 auto;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      .tab {
+        font-size: 17px;
+        flex-grow: 1;
+        background: #ececec;
+        display: flex;
+        color: #808080;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s;
+        cursor: pointer;
+        font-weight: bold;
+        clip-path: polygon(0 0, calc(100% - 25px) 0, 100% 50%, calc(100% - 25px) 100%, 0 100%, 25px 50%);
+        &:hover {
+          background: $base;
+          color: white;
+        }
+      }
+      .tab-active {
+        background: $base;
+        color: white;
+      }
+    }
+  }
+  .article-tab-active {
+    border-bottom: 2px dashed $base !important;
+  }
+  .article-box {
+    max-width: 1000px;
+    margin: 0 auto;
+    .article-content {
+      margin: 20px 0;
+      .img {
+        height: 300px;
+        background: $base;
+        font-size: 2rem;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .msg {
+        padding: 20px 0;
+      }
+    }
+  }
 }
