--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -31,13 +31,12 @@ html {
   height: 100%;
 }
 /***loading 自定义样式**/
-.el-loading-spinner{
-  i{
+.el-loading-spinner {
+  i {
     font-size: 2rem;
     color: white;
   }
-  .el-loading-text{
-        
+  .el-loading-text {
   }
 }
 
@@ -103,12 +102,91 @@ html {
       .msg {
         padding: 20px 0;
       }
-      .noticeTitle{
+      .noticeTitle {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
         word-break: break-all;
       }
     }
+  }
+}
+
+//input 输入框样式 (来源于登录页面)
+.input-box {
+  height: 40px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+  .line {
+    transition: 0.5s;
+    width: 5px;
+    height: 5px;
+    background: $base;
+    opacity: 0.8;
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  i {
+    position: absolute;
+    left: 5px;
+    font-size: 1.5rem;
+    color: #4b4b4b;
+    transition: 0.5s;
+  }
+  input {
+    color: #5c5c5c;
+    display: inline-block;
+    transition: 0.5s;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid rgb(211, 211, 211);
+    padding-left: 50px;
+    padding-right: 10px;
+    font-size: 14px;
+    outline: none;
+    position: relative;
+    &:focus ~ .line {
+      transform: translateX(-10px);
+      opacity: 1;
+    }
+  }
+  .verification-code {
+    width: 100px;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    &:hover input{
+          color: $base;
+    }
+    input {
+      color: #808080;
+      cursor: pointer;
+      display: inline-block;
+      width: 100px;
+      height: 20px;
+      padding: 0;
+      font-size: 14px;
+      padding-left: 10px;
+      border: none !important;
+      border-left: 1px solid rgb(211, 211, 211) !important;
+    }
+  }
+}
+//input 获取焦点样式 (来源于登录页面)
+.input-box-focus {
+  i {
+    color: $base !important;
+  }
+  input {
+    border-bottom: 1px solid #a0cfff !important;
   }
 }
