完善注册，登录等内容

--- a/src/assets/css/pc_index.scss
+++ b/src/assets/css/pc_index.scss
@@ -34,7 +34,7 @@ html {
 .el-loading-spinner {
   i {
     font-size: 2rem;
-    color: white;
+    color: white !important;
   }
   .el-loading-text {
   }
