--- a/src/assets/css/mobile_index.scss
+++ b/src/assets/css/mobile_index.scss
@@ -1,20 +1,116 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body,html{
-    height: 100%;
+body,
+html {
+  height: 100%;
 }
-
+/***loading 自定义样式**/
+.el-loading-spinner {
+  i {
+    font-size: 2rem;
+    color: white !important;
+  }
+  .el-loading-text {
+  }
+}
+// 头部导航栏样式
+.head-nav-show {
+  background: $headNav_bck;
+  box-shadow: 0 0 5px #5c5c5c;
+}
 //文章阅读页样式
 .ViewArticle {
-    word-break: break-all;
-    padding: 1rem;
-    padding-top: 4rem;
+  word-break: break-all;
+  padding: 1rem;
+  padding-top: 4rem;
+  position: relative;
+  z-index: 5;
+  img {
+    width: 100% !important;
+  }
+  .content {
+    background: rgba(255, 255, 255, 0.733);
+  }
+}
+
+//input 输入框样式 (来源于登录页面)
+.input-box {
+    height: 40px;
     position: relative;
-    z-index: 5;
-    img{
-        width: 100% !important;
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+    .line {
+      transition: 0.5s;
+      width: 5px;
+      height: 5px;
+      background: $base;
+      opacity: 0.8;
+      position: absolute;
+      left: 0;
+      opacity: 0;
+      transform: translateX(-20px);
+    }
+    i {
+      position: absolute;
+      left: 5px;
+      font-size: 1.5rem;
+      color: #4b4b4b;
+      transition: 0.5s;
+    }
+    input {
+      color: #5c5c5c;
+      display: inline-block;
+      transition: 0.5s;
+      width: 100%;
+      height: 100%;
+      border: none;
+      background: transparent;
+      border-bottom: 1px solid rgb(211, 211, 211);
+      padding-left: 50px;
+      padding-right: 10px;
+      font-size: 14px;
+      outline: none;
+      position: relative;
+      &:focus ~ .line {
+        transform: translateX(-10px);
+        opacity: 1;
+      }
+    }
+    .verification-code {
+      width: 100px;
+      height: 100%;
+      position: absolute;
+      right: 0;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      &:hover input{
+            color: $base;
+      }
+      input {
+        color: #808080;
+        cursor: pointer;
+        display: inline-block;
+        width: 100px;
+        height: 20px;
+        padding: 0;
+        font-size: 14px;
+        padding-left: 10px;
+        border: none !important;
+        border-left: 1px solid rgb(211, 211, 211) !important;
+      }
+    }
+  }
+  //input 获取焦点样式 (来源于登录页面)
+  .input-box-focus {
+    i {
+      color: $base !important;
+    }
+    input {
+      border-bottom: 1px solid #a0cfff !important;
     }
   }
